export const snapshot = {};

snapshot[`cli help and version output > help 1`] = `
stdout:
"
Usage:   aai   
Version: 0.1.66

Description:

  Voice agent development kit

Options:

  -h, --help     - Show this help.                            
  -V, --version  - Show the version number for this program.  

Commands:

  new     [dir]  - Scaffold a new agent project                   
  build          - Validate and bundle the agent                  
  dev            - Run local dev server with file watching        
  deploy         - Bundle and deploy to production                
  types          - Set up TypeScript tooling for an existing agent

"
stderr:
""
`;

snapshot[`cli help and version output > version 1`] = `
stdout:
"aai 0.1.66
"
stderr:
""
`;

snapshot[`cli help and version output > newHelp 1`] = `
stdout:
"
Usage:   aai new [dir]
Version: 0.1.66       

Description:

  Scaffold a new agent project

Options:

  -h, --help                  - Show this help.              
  -n, --name      <name>      - Agent name                   
  -t, --template  <template>  - Template to use              
  -f, --force                 - Overwrite existing agent.ts  

"
stderr:
""
`;

snapshot[`cli help and version output > devHelp 1`] = `
stdout:
'
Usage:   aai dev
Version: 0.1.66 

Description:

  Run local dev server with file watching

Options:

  -h, --help            - Show this help.                                                    
  -p, --port    <port>  - Port for local proxy server  (Default: \\x1b[33m3000\\x1b[39m)                       
  -s, --server  <url>   - Production server URL        (Default: \\x1b[32m"https://aai-agent.fly.dev"\\x1b[39m)

'
stderr:
""
`;

snapshot[`cli help and version output > deployHelp 1`] = `
stdout:
"
Usage:   aai deploy
Version: 0.1.66    

Description:

  Bundle and deploy to production

Options:

  -h, --help           - Show this help.                        
  -s, --server  <url>  - Server URL                             
  --dry-run            - Validate and bundle without deploying  

"
stderr:
""
`;

snapshot[`cli help and version output > buildHelp 1`] = `
stdout:
"
Usage:   aai build
Version: 0.1.66   

Description:

  Validate and bundle the agent

Options:

  -h, --help  - Show this help.  

"
stderr:
""
`;

snapshot[`cli help and version output > typesHelp 1`] = `
stdout:
"
Usage:   aai types
Version: 0.1.66   

Description:

  Set up TypeScript tooling for an existing agent

Options:

  -h, --help  - Show this help.  

"
stderr:
""
`;
